<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SelectionProfileActivity">

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="120dp" app:srcCompat="@mipmap/logo"
            android:id="@+id/imageView_logo"
            app:layout_constraintTop_toTopOf="parent" android:background="@color/colorBlueDuoc"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/txtLogo"/>
    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@mipmap/alumno"
            android:id="@+id/imageButton_alumno"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="32dp" android:layout_marginStart="32dp"
            app:layout_constraintEnd_toStartOf="@+id/imageButton_profesor"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/textView_opt_select"
            android:contentDescription="@string/txtAlumno"
            android:background="@android:color/transparent"/>
    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@mipmap/profesor"
            android:id="@+id/imageButton_profesor" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            app:layout_constraintStart_toEndOf="@+id/imageButton_alumno"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/textView_opt_select"
            android:contentDescription="@string/txtProfessor"
            android:background="@android:color/transparent"/>
    <TextView
            android:text="@string/txtAlumno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView_alumno" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/imageButton_alumno" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="32dp" android:layout_marginStart="32dp"
            app:layout_constraintEnd_toStartOf="@+id/textView_profesor" android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp" app:layout_constraintHorizontal_bias="0.49"
            android:contentDescription="@string/txtAlumno"/>
    <TextView
            android:text="@string/txtProfessor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView_profesor" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/imageButton_profesor" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp" android:layout_marginRight="32dp"
            app:layout_constraintStart_toEndOf="@+id/textView_alumno" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/txtProfessor"/>
    <TextView
            android:text="@string/txtSelectedProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView_opt_select"
            android:textAppearance="@style/TextAppearance.AppCompat.Button" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView_logo"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp" android:layout_marginRight="32dp"
            android:textSize="20sp"/>


</android.support.constraint.ConstraintLayout>